Add pin route to Hello microapp and fix CSS bug

--- a/lib/hello/views/hello.hbs
+++ b/lib/hello/views/hello.hbs
@@ -1,4 +1,15 @@
 <div class="row">
-    <h2>{{welcomeMessage}}</h2>
-    <p>We are really very glad to see you today!
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <h2>{{welcomeMessage}}</h2>
+            <p>Please insert your PseudoBank card.</p>
+        </div>
+    </div>
+    
+
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <button type="button" class="btn btn-primary btn-lg btn-block">Press to insert your PseudoBank card</button>
+        </div>
+    </div>
 </div>
