--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
 
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" rel="stylesheet" />
   <link href="/css/app.css" media="all" rel="stylesheet" />
+
 </head>
 
 <body lang="en">
@@ -14,6 +15,8 @@
   <div id="canvas" class="container">
         {{{body}}}
   </div>
+
+  <script src="/js/bundle.js" async></script>
 
 </body>
 
