--- a/lib/atm/views/atm.hbs
+++ b/lib/atm/views/atm.hbs
@@ -2,6 +2,6 @@
 <div class="row">
     <div class="col-md-12 text-center">
         <h2>{{welcomeMessage}}</h2>
-        <main id="pin">Pin keypad component</main>
+        <main id="atm">ATM react component</main>
     </div>
 </div>
