--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,7 @@
 
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" media="all" rel="stylesheet" />
   <link href="/css/app.css" media="all" rel="stylesheet" />
+  <link href="/css/loaders.min.css" rel="stylesheet" >
 
 </head>
 
